fix(adapted-styles): correct post title input color in dark mode

--- a/src/styles/adaptedStyles/pages/momentsPage.scss
+++ b/src/styles/adaptedStyles/pages/momentsPage.scss
@@ -94,7 +94,8 @@
     }
 
     .fixed-author-header__author__name,
-    .dyn-blocked-mask.feed-item .dyn-blocked-mask__msg-title {
+    .dyn-blocked-mask.feed-item .dyn-blocked-mask__msg-title,
+    .bili-dyn-publishing__title__input {
       color: var(--bew-text-1);
     }
 
